terraform/non-conforme/bad-rds.tf
resource "aws_security_group" "public_ssh" {
  name = "public-ssh"
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
